horizontal scroll fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -35,6 +35,7 @@
 body {
     background-color: var(--background);
     font-family: var(--font-page), sans-serif;
+    
 }
 
 main {
@@ -44,26 +45,18 @@ main {
 /* --------------------------------------  HEADER AND NAVIGATION ------------------------------------------------ */
 header {
     display: grid;
-    grid-template-columns: 80% 100px;
+    grid-template-columns: 80% auto;
     grid-template-rows: auto auto ;
     background-color: var(--primary-color);
     width: 100%;
     align-items: center;
     /* border-bottom: 3px solid var(--sun-color); */
-
 }
 
 #header-top {
     justify-content: center;
     width: 100%;
-}
-
-#heading-w-img {
-    display: grid;
-    grid-template-columns: 100px auto;
-    grid-template-rows: auto auto;
-    padding-left: 1rem;
-    justify-content: center;
+    place-items: center;
 }
 
 #headerImg {
@@ -71,7 +64,6 @@ header {
     grid-row: 1 / 3; */
     max-width: 200px;
     height: 100px;
-    /* margin-left: 1rem; */
     padding: 1rem;
 }
 
@@ -111,11 +103,14 @@ h3 {
 
 /* hamburger button */
 #ham-button {
+    padding: 0;
+    margin: 0;
     grid-column: 2 / 3;
     font-size: 1.5rem;
     border: 0;
     background: none;
     color: white;
+    max-width: 50px;
 }
 
 /* appearance for the hamburger menu button when open class is off */
@@ -133,8 +128,6 @@ h3 {
     background-color: var(--secondary-color);
     display: flex;
     flex-direction: column;
-    grid-column: 1 / 5;
-    grid-row: 2 / 3;
     font-weight: 500;
     font-size: large;
     overflow: hidden;
@@ -143,7 +136,6 @@ h3 {
     transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
     padding: .5em;
     gap: 1.5em;
-
 }
 
 /* State when the nav-bar is open */
@@ -166,6 +158,7 @@ h3 {
 /* class toggled in JS */
 .open a {
     display: block;
+    width: auto;
 }
 
 
