--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -41,10 +41,18 @@
 @media (max-width: 720px) {
     #home-details {
         grid-template-columns: 1fr 1fr;
+        width: 100%;
     }    
 
     .events {
         grid-column: 1/3;
     }
 
+    .nav-bar.open {
+        grid-column: 1/3;
+    }
+
+    #headerImg {
+        margin-left: 3rem;
+    }
 }
